--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,14 +1,15 @@
 apply plugin: 'com.android.application'
-
+apply plugin: 'com.neenbedankt.android-apt'
 android {
-    compileSdkVersion 25
-    buildToolsVersion "25.0.2"
+    def ext = rootProject.ext
+    compileSdkVersion ext.compileSdkVersion
+    buildToolsVersion ext.buildToolsVersion
     defaultConfig {
         applicationId "com.aries.alert"
-        minSdkVersion 14
-        targetSdkVersion 25
+        minSdkVersion ext.minSdkVersion
+        targetSdkVersion ext.targetSdkVersion
         versionCode 1
-        versionName "1.0"
+        versionName "1.1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -21,10 +22,12 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
-        exclude group: 'com.android.support', module: 'support-annotations'
-    })
-    compile 'com.android.support:appcompat-v7:25.1.0'
-    testCompile 'junit:junit:4.12'
+    def supportVersion = rootProject.ext.supportVersion
+    compile 'com.android.support:appcompat-v7:'.concat(supportVersion)
+    apt 'com.jakewharton:butterknife-compiler:8.4.0'
     compile project(':library')
+    compile 'com.jakewharton:butterknife:8.7.0'
+
+    compile 'com.github.AriesHoo:RadiusView:1.0.2'
+    compile 'com.github.AriesHoo:TitleBarView:1.3.0'
 }
